<resources>
    <string name="app_name">BiTacola</string>
    <string name="description">Descripció</string>
    <string name="title">Títol</string>
    <string name="Date">Data</string>
    <string name="edit">Editar</string>
    <string name="delete">Esborrar</string>
    <string name="location">Localización</string>
    <string name="saveName">Guarda</string>
    <string name="cancelName">Cancela</string>
    <string name="localizationText">Click Here</string>
    <string name="signe">-</string>
    <string name="icon">Icona</string>
    <string name="share">Compartir</string>
    <string name="folderCode">Codi de la carpeta</string>
    <string name="share_by_email">Introdueix els correus separats per un \";\".</string>
    <string name="nuevo">New</string>
    <string name="logIn">Log In</string>
    <string name="nameUser">Name User</string>
</resources>
